fix layout bug

--- a/frontend/src/styles/home/hero-section.css
+++ b/frontend/src/styles/home/hero-section.css
@@ -126,22 +126,6 @@
   align-items: center;
 }
 
-.home-card-container.grid.no-movies-message {
-  display: flex;
-  padding: 1rem;
-  font-size: 1.2rem;
-  text-align: start;
-  justify-content: start !important;
-  align-items: start;
-}
-
-.no-movies-message {
-  display: flex;
-  padding-left: 1rem;
-  color: #a7a0a0;
-  text-align: start;
-}
-
 @media screen and (max-width: 942px) {
   .home-card-container.grid {
     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
@@ -156,7 +140,14 @@
 
 .home-card-container.grid .movie-card:hover {
   transform: scale(1.03);
-  color: rgb(255, 0, 0);
+  color: white;
+}
+
+.no-movies-message {
+  display: flex;
+  padding-left: 1rem;
+  color: #a7a0a0;
+  text-align: start;
 }
 
 /* .home-card-container.grid .movie-card p {
@@ -173,6 +164,6 @@
   color: #cccccc;
 } */
 
-.home-card-container.grid.movie-card:hover p {
-  color: #ff0000;
+.home-card-container.grid .movie-card:hover p {
+  color: #fff;
 }
